--- a/index.html
+++ b/index.html
@@ -130,4 +130,255 @@
       { key: 'ethos',        name: 'Ethos',                url: 'https://app.ethos.network/',         desc: 'Web3 profile & quests' },
       { key: 'fundamental',  name: 'Fundamental.lol',      url: 'https://fundamental.lol/r/?node=PetrAnto12-5mu', desc: 'Onchain social hub' },
       { key: 'addicted',     name: 'Addicted.fun',         url: 'https://addicted.fun',               desc: 'Daily tasks & games', referralNote: 'Invite code', copyText: 'IHMJC4DK' },
-      { key: 'addplus',      n
+      { key: 'addplus',      name: 'AddPlus.org',          url: 'https://addplus.org/boost/PetrAnto12', desc: 'Engagement boosters' },
+    ];
+
+    const STORAGE_KEY = 'airdropTracker.v2';
+
+    // Period sizes
+    const PAST_DAYS = 7;
+    const PAST_WEEKS = 4;
+    const PAST_MONTHS = 3;
+    const PAST_QUARTERS = 3;
+
+    // ---------- Utilities ----------
+    const pad = n => String(n).padStart(2, '0');
+    const today = () => { const d = new Date(); return `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`; };
+    const addDays = (d, delta) => { const nd = new Date(d); nd.setDate(nd.getDate()+delta); return nd; };
+    const fmtDayCol = (d) => {
+      const months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
+      return `${pad(d.getDate())}-${months[d.getMonth()]}`;
+    };
+    const getISOWeek = (d) => {
+      const date = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
+      const dayNum = date.getUTCDay() || 7;
+      date.setUTCDate(date.getUTCDate() + 4 - dayNum);
+      const yearStart = new Date(Date.UTC(date.getUTCFullYear(),0,1));
+      return Math.ceil((((date - yearStart) / 86400000) + 1)/7);
+    };
+    const quarterOf = (d) => Math.floor(d.getMonth()/3) + 1;
+
+    const lastNDays = (n) => Array.from({length:n}, (_,i) => addDays(new Date(), -(i+1))).reverse();
+    const lastNWeeks = (n) => {
+      const res = []; const now = new Date();
+      for (let i=1;i<=n;i++){ const end = addDays(now, -7*(i-1)); const start = addDays(now, -7*i); res.unshift({start, end}); }
+      return res;
+    };
+    const lastNMonths = (n) => {
+      const res = []; const now = new Date();
+      for (let i=1;i<=n;i++){
+        const ref = new Date(now.getFullYear(), now.getMonth()-i, 1);
+        const start = new Date(ref.getFullYear(), ref.getMonth(), 1);
+        const end = new Date(ref.getFullYear(), ref.getMonth()+1, 1);
+        res.unshift({start, end, label: start.toLocaleString('en', {month:'long'})});
+      } return res;
+    };
+    const lastNQuarters = (n) => {
+      const res = []; const now = new Date(); let q = quarterOf(now) - 1; let y = now.getFullYear();
+      for (let i=0;i<n;i++){
+        if (q === 0){ q = 4; y -= 1; }
+        const startMonth = (q-1)*3;
+        const start = new Date(y, startMonth, 1);
+        const end = new Date(y, startMonth+3, 1);
+        res.unshift({start, end, label: `Q${q}-${String(y).slice(-2)}`});
+        q -= 1;
+      } return res;
+    };
+
+    // Storage
+    const load = () => { try { return JSON.parse(localStorage.getItem(STORAGE_KEY)) || {}; } catch { return {}; } };
+    const save = (data) => localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
+    const ensureProj = (data, key) => { if(!data[key]) data[key] = { daily:{} }; return data[key]; };
+
+    const setTodayState = (key, patch) => {
+      const data = load(); const proj = ensureProj(data, key); const t = today();
+      if(!proj.daily[t]) proj.daily[t] = { clicked:false, farmed:false };
+      Object.assign(proj.daily[t], patch); save(data);
+    };
+    const getDayState = (key, dateStr) => {
+      const data = load(); return (data[key] && data[key].daily && data[key].daily[dateStr]) || { clicked:false, farmed:false };
+    };
+    const stateToColor = (s) => (s.farmed && s.clicked) ? 'green' : (s.clicked ? 'yellow' : 'red');
+    const aggregateRange = (key, start, end) => {
+      const d = new Date(start); let anyClick=false, anyFarm=false;
+      while (d < end){
+        const ds = `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
+        const s = getDayState(key, ds);
+        anyClick ||= s.clicked; anyFarm ||= (s.clicked && s.farmed);
+        d.setDate(d.getDate()+1);
+      }
+      if (anyFarm) return 'green'; if (anyClick) return 'yellow'; return 'red';
+    };
+
+    // ---------- Rendering ----------
+    const headEl = document.getElementById('trackerHead');
+    const bodyEl = document.getElementById('trackerBody');
+
+    const renderHead = () => {
+      headEl.innerHTML = '';
+      const days = lastNDays(PAST_DAYS);
+      const weeks = lastNWeeks(PAST_WEEKS);
+      const months = lastNMonths(PAST_MONTHS);
+      const quarters = lastNQuarters(PAST_QUARTERS);
+
+      const tr1 = document.createElement('tr');
+      tr1.innerHTML = `
+        <th rowspan="2" class="project-col text-center"></th>
+        <th rowspan="2" class="desc-col text-center">Desc.</th>
+        <th colspan="2" class="text-center">Today</th>
+        <th colspan="${days.length}" class="text-center">Past 7 days</th>
+        <th colspan="${weeks.length}" class="text-center">Past weeks</th>
+        <th colspan="${months.length}" class="text-center">Past Months</th>
+        <th colspan="${quarters.length}" class="text-center">Past Quarters</th>
+      `;
+      const tr2 = document.createElement('tr');
+      tr2.innerHTML = `
+        <th class="today-col">Click</th>
+        <th class="today-col">Farm</th>
+        ${days.map(d => `<th class="history-col">${fmtDayCol(d)}</th>`).join('')}
+        ${weeks.map(w => `<th class="history-col">CW${getISOWeek(addDays(w.end, -1))}</th>`).join('')}
+        ${months.map(m => `<th class="history-col">${m.label}</th>`).join('')}
+        ${quarters.map(q => `<th class="history-col">${q.label}</th>`).join('')}
+      `;
+      headEl.appendChild(tr1); headEl.appendChild(tr2);
+    };
+
+    const makeStatusCell = (color) => {
+      const td = document.createElement('td'); td.className = 'text-center';
+      const div = document.createElement('div'); div.className = `status-box status-${color}`;
+      td.appendChild(div); return td;
+    };
+
+    const setCellColor = (td, color) => {
+      const box = td.querySelector('.status-box'); if (!box) return;
+      box.classList.remove('status-green','status-yellow','status-red');
+      box.classList.add(`status-${color}`);
+    };
+
+    const updateHistoryCellsForRow = (key, tr) => {
+      const days = lastNDays(PAST_DAYS);
+      const weeks = lastNWeeks(PAST_WEEKS);
+      const months = lastNMonths(PAST_MONTHS);
+      const quarters = lastNQuarters(PAST_QUARTERS);
+      let colIndex = 4; // [project, desc, click, farm] => first history cell
+      days.forEach(d => {
+        const ds = `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
+        setCellColor(tr.cells[colIndex++], stateToColor(getDayState(key, ds)));
+      });
+      weeks.forEach(w => setCellColor(tr.cells[colIndex++], aggregateRange(key, w.start, w.end)));
+      months.forEach(m => setCellColor(tr.cells[colIndex++], aggregateRange(key, m.start, m.end)));
+      quarters.forEach(q => setCellColor(tr.cells[colIndex++], aggregateRange(key, q.start, q.end)));
+    };
+
+    const renderBody = () => {
+      bodyEl.innerHTML = '';
+      const days = lastNDays(PAST_DAYS);
+      const weeks = lastNWeeks(PAST_WEEKS);
+      const months = lastNMonths(PAST_MONTHS);
+      const quarters = lastNQuarters(PAST_QUARTERS);
+
+      PROJECTS.forEach(p => {
+        const tr = document.createElement('tr');
+
+        // Project name + link + optional copy badge
+        const projectCell = document.createElement('td');
+        projectCell.className = 'project-cell';
+        const a = document.createElement('a');
+        a.href = p.url; a.textContent = p.name; a.target = '_blank'; a.rel = 'noopener';
+        a.addEventListener('click', () => {
+          setTodayState(p.key, { clicked: true });
+          const cb = document.querySelector(`#click-${p.key}`); if (cb) cb.checked = true;
+          updateHistoryCellsForRow(p.key, tr);
+        });
+        projectCell.appendChild(a);
+
+        if (p.referralNote || p.copyText){
+          const span = document.createElement('span');
+          span.className = 'badge rounded-pill text-bg-secondary ms-2 note-badge code-badge';
+          span.title = p.referralNote || 'Code'; span.textContent = p.referralNote || 'Code';
+          span.addEventListener('click', async () => {
+            if (p.copyText) {
+              try { await navigator.clipboard.writeText(p.copyText); showToast(`Copied: ${p.copyText}`); }
+              catch { showToast('Copy failed'); }
+            }
+          });
+          projectCell.appendChild(span);
+        }
+        tr.appendChild(projectCell);
+
+        // NEW: short description
+        const tdDesc = document.createElement('td');
+        tdDesc.className = 'desc-col';
+        tdDesc.textContent = p.desc || '';
+        tr.appendChild(tdDesc);
+
+        // Today: Click (read-only)
+        const tdClick = document.createElement('td'); tdClick.className = 'text-center';
+        const cbClick = document.createElement('input'); cbClick.type='checkbox'; cbClick.className='form-check-input';
+        cbClick.id = `click-${p.key}`; cbClick.setAttribute('readonly','readonly');
+        cbClick.checked = getDayState(p.key, today()).clicked; tdClick.appendChild(cbClick); tr.appendChild(tdClick);
+
+        // Today: Farm (manual)
+        const tdFarm = document.createElement('td'); tdFarm.className = 'text-center';
+        const cbFarm = document.createElement('input'); cbFarm.type='checkbox'; cbFarm.className='form-check-input'; cbFarm.id=`farm-${p.key}`;
+        cbFarm.checked = getDayState(p.key, today()).farmed;
+        cbFarm.addEventListener('change', () => { setTodayState(p.key, { farmed: cbFarm.checked }); updateHistoryCellsForRow(p.key, tr); });
+        tdFarm.appendChild(cbFarm); tr.appendChild(tdFarm);
+
+        // Past 7 days
+        days.forEach(d => {
+          const ds = `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
+          tr.appendChild(makeStatusCell(stateToColor(getDayState(p.key, ds))));
+        });
+        // Weeks / Months / Quarters
+        weeks.forEach(w => tr.appendChild(makeStatusCell(aggregateRange(p.key, w.start, w.end))));
+        months.forEach(m => tr.appendChild(makeStatusCell(aggregateRange(p.key, m.start, m.end))));
+        quarters.forEach(q => tr.appendChild(makeStatusCell(aggregateRange(p.key, q.start, q.end))));
+
+        bodyEl.appendChild(tr);
+      });
+    };
+
+    // ---------- Controls ----------
+    const showToast = (msg) => {
+      const tb = document.getElementById('toastBody'); tb.textContent = msg;
+      const toast = new bootstrap.Toast(document.getElementById('toast')); toast.show();
+    };
+
+    document.getElementById('resetTodayBtn').addEventListener('click', () => {
+      const data = load(); const t = today();
+      PROJECTS.forEach(p => { if (data[p.key]?.daily?.[t]) data[p.key].daily[t] = { clicked:false, farmed:false }; });
+      save(data);
+      PROJECTS.forEach(p => {
+        const c1 = document.getElementById(`click-${p.key}`); const c2 = document.getElementById(`farm-${p.key}`);
+        if (c1) c1.checked = false; if (c2) c2.checked = false;
+      });
+      renderBody(); showToast('Today reset.');
+    });
+
+    document.getElementById('resetAllBtn').addEventListener('click', () => {
+      if (!confirm('This will erase ALL saved history for this tracker. Continue?')) return;
+      localStorage.removeItem(STORAGE_KEY); renderBody(); showToast('All data cleared.');
+    });
+
+    document.getElementById('exportBtn').addEventListener('click', () => {
+      const blob = new Blob([localStorage.getItem(STORAGE_KEY) || '{}'], {type:'application/json'});
+      const url = URL.createObjectURL(blob); const a = document.createElement('a');
+      a.href = url; a.download = `airdrop-tracker-${today()}.json`; a.click(); URL.revokeObjectURL(url);
+    });
+
+    document.getElementById('importInput').addEventListener('change', async (e) => {
+      const file = e.target.files?.[0]; if (!file) return;
+      const text = await file.text();
+      try { JSON.parse(text); localStorage.setItem(STORAGE_KEY, text); renderBody(); showToast('Import successful.'); }
+      catch { showToast('Invalid JSON file.'); }
+      finally { e.target.value = ''; }
+    });
+
+    // ---------- Init ----------
+    renderHead(); renderBody();
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
