--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Airdrop Farming Tracker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* --------- Black / Dark theme --------- */
+    /* --------- Dark theme --------- */
     :root{
       --bg: #0b0d10;
       --panel: #0f1115;
@@ -21,12 +21,10 @@
     body { background: var(--bg); color: var(--text); }
     a { color: var(--link); } a:hover { color: var(--link-hover); }
 
-    /* --------- Centered narrow app layout --------- */
-    .app-wrap { max-width: clamp(920px, 85vw, 1180px); margin: 0 auto; }
     .sticky-top-bg { background: var(--panel); box-shadow: 0 2px 16px rgba(0,0,0,.6); border: 1px solid var(--border); }
     .subhead { color: var(--muted); }
 
-    /* --------- Table look --------- */
+    /* --------- Table --------- */
     .table {
       --bs-table-bg: var(--panel);
       --bs-table-color: var(--text);
@@ -41,6 +39,7 @@
     .desc-col { width: 280px; color: var(--muted); font-size: .9rem; }
     .today-col { width: 72px; text-align: center; }
     .history-col { width: 40px; text-align: center; }
+    .table-responsive { overflow-x: auto; } /* plein écran mais scroll horizontal si besoin */
 
     .status-box {
       width: 26px; height: 26px; border-radius: 4px; border: 1px solid rgba(255,255,255,.06);
@@ -56,55 +55,50 @@
     .code-badge { cursor: pointer; }
     .controls .btn { margin-right: .5rem; }
 
-    /* --------- Banner --------- */
+    /* --------- Banner: pas de recadrage, image entière visible --------- */
     .banner-wrap { margin: 12px 0 10px; border-radius: 12px; overflow: hidden; border: 1px solid var(--border); background: #000; }
-    .banner-wrap img { width: 100%; display: block; object-fit: cover; max-height: 140px; } /* <= smaller logo on desktop */
-
-    /* Keep the whole block centered even when screen is wider than content */
-    .table-responsive { overflow-x: auto; }
+    .banner-wrap img { width: 100%; height: auto; display: block; } /* pas de object-fit ni max-height -> aucune coupe */
   </style>
 </head>
 <body>
   <div class="container-fluid py-3">
-    <div class="app-wrap">
 
-      <!-- Banner (auto-hides if banner.png missing) -->
-      <div class="banner-wrap">
-        <img src="banner.png" alt="Banner" onerror="this.closest('.banner-wrap').remove();">
-      </div>
+    <!-- Bannière : se masque si banner.png absent -->
+    <div class="banner-wrap">
+      <img src="banner.png" alt="Banner" onerror="this.closest('.banner-wrap').remove();">
+    </div>
 
-      <div class="d-flex align-items-center justify-content-between mb-3 sticky-top sticky-top-bg px-2 py-2 rounded-3">
-        <div>
-          <h1 class="h4 mb-0 text-center">Airdrop Farming Tracker</h1>
-          <div class="subhead">Mode sombre • Auto-tick sur clic de lien • Confirmation manuelle du farm • Données locales</div>
-        </div>
-        <div class="controls">
-          <button id="resetTodayBtn" class="btn btn-outline-secondary btn-sm">Reset today</button>
-          <button id="resetAllBtn" class="btn btn-outline-danger btn-sm">Reset all</button>
-          <button id="exportBtn" class="btn btn-outline-primary btn-sm">Export</button>
-          <label class="btn btn-outline-primary btn-sm mb-0">
-            Import <input id="importInput" type="file" accept="application/json" hidden>
-          </label>
-        </div>
+    <div class="d-flex align-items-center justify-content-between mb-3 sticky-top sticky-top-bg px-2 py-2 rounded-3">
+      <div>
+        <h1 class="h4 mb-0">Airdrop Farming Tracker</h1>
+        <div class="subhead">Mode sombre • Auto-tick sur clic de lien • Confirmation manuelle du farm • Données locales</div>
       </div>
+      <div class="controls">
+        <button id="resetTodayBtn" class="btn btn-outline-secondary btn-sm">Reset today</button>
+        <button id="resetAllBtn" class="btn btn-outline-danger btn-sm">Reset all</button>
+        <button id="exportBtn" class="btn btn-outline-primary btn-sm">Export</button>
+        <label class="btn btn-outline-primary btn-sm mb-0">
+          Import <input id="importInput" type="file" accept="application/json" hidden>
+        </label>
+      </div>
+    </div>
 
-      <div class="table-responsive">
-        <table id="trackerTable" class="table table-bordered table-striped align-middle mx-auto">
-          <thead id="trackerHead"></thead>
-          <tbody id="trackerBody"></tbody>
-        </table>
-      </div>
+    <div class="table-responsive">
+      <table id="trackerTable" class="table table-bordered table-striped align-middle">
+        <thead id="trackerHead"></thead>
+        <tbody id="trackerBody"></tbody>
+      </table>
+    </div>
 
-      <div class="legend mt-3">
-        <span class="me-3"><span class="status-box status-red me-1"></span> No click and no farm</span>
-        <span class="me-3"><span class="status-box status-yellow me-1"></span> Click but no farm confirmed</span>
-        <span class="me-3"><span class="status-box status-green me-1"></span> Click and farm OK</span>
-      </div>
+    <div class="legend mt-3">
+      <span class="me-3"><span class="status-box status-red me-1"></span> No click and no farm</span>
+      <span class="me-3"><span class="status-box status-yellow me-1"></span> Click but no farm confirmed</span>
+      <span class="me-3"><span class="status-box status-green me-1"></span> Click and farm OK</span>
+    </div>
 
-      <div class="mt-4" style="color:var(--muted); font-size:.9rem;">
-        <strong>Notes :</strong> “Click” se coche automatiquement lorsque vous ouvrez le lien. “Farm” est manuel.
-        Les résumés semaine/mois/trimestre sont dérivés des enregistrements journaliers sauvegardés dans votre navigateur.
-      </div>
+    <div class="mt-4" style="color:var(--muted); font-size:.9rem;">
+      <strong>Notes :</strong> “Click” se coche automatiquement lorsque vous ouvrez le lien. “Farm” est manuel.
+      L’historique semaines/mois/trimestres est dérivé des enregistrements journaliers sauvegardés localement.
     </div>
   </div>
 
@@ -260,7 +254,7 @@
       const weeks = lastNWeeks(PAST_WEEKS);
       const months = lastNMonths(PAST_MONTHS);
       const quarters = lastNQuarters(PAST_QUARTERS);
-      let colIndex = 4; // [project, desc, click, farm] => first history cell
+      let colIndex = 4; // [project, desc, click, farm]
       days.forEach(d => {
         const ds = `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
         setCellColor(tr.cells[colIndex++], stateToColor(getDayState(key, ds)));
@@ -280,7 +274,7 @@
       PROJECTS.forEach(p => {
         const tr = document.createElement('tr');
 
-        // Project name + link + optional copy badge
+        // Project cell
         const projectCell = document.createElement('td');
         projectCell.className = 'project-cell';
         const a = document.createElement('a');
@@ -306,26 +300,25 @@
         }
         tr.appendChild(projectCell);
 
-        // NEW: short description
+        // Desc
         const tdDesc = document.createElement('td');
-        tdDesc.className = 'desc-col';
-        tdDesc.textContent = p.desc || '';
+        tdDesc.className = 'desc-col'; tdDesc.textContent = p.desc || '';
         tr.appendChild(tdDesc);
 
-        // Today: Click (read-only)
+        // Today: Click
         const tdClick = document.createElement('td'); tdClick.className = 'text-center';
         const cbClick = document.createElement('input'); cbClick.type='checkbox'; cbClick.className='form-check-input';
         cbClick.id = `click-${p.key}`; cbClick.setAttribute('readonly','readonly');
         cbClick.checked = getDayState(p.key, today()).clicked; tdClick.appendChild(cbClick); tr.appendChild(tdClick);
 
-        // Today: Farm (manual)
+        // Today: Farm
         const tdFarm = document.createElement('td'); tdFarm.className = 'text-center';
         const cbFarm = document.createElement('input'); cbFarm.type='checkbox'; cbFarm.className='form-check-input'; cbFarm.id=`farm-${p.key}`;
         cbFarm.checked = getDayState(p.key, today()).farmed;
         cbFarm.addEventListener('change', () => { setTodayState(p.key, { farmed: cbFarm.checked }); updateHistoryCellsForRow(p.key, tr); });
         tdFarm.appendChild(cbFarm); tr.appendChild(tdFarm);
 
-        // Past 7 days
+        // Days
         days.forEach(d => {
           const ds = `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;
           tr.appendChild(makeStatusCell(stateToColor(getDayState(p.key, ds))));
