--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       { key: 'fundamental',  name: 'Fundamental.lol',      url: 'https://fundamental.lol/r/?node=PetrAnto12-5mu', desc: 'Onchain social hub' },
       { key: 'addicted',     name: 'Addicted.fun',         url: 'https://addicted.fun',               desc: 'Daily tasks & games', referralNote: 'Invite code', copyText: 'IHMJC4DK' },
       { key: 'addplus',      name: 'AddPlus.org',          url: 'https://addplus.org/boost/PetrAnto12', desc: 'Engagement boosters' },
+      { key: 'mindoshare',   name: 'Mindoshare.ai',        url: 'https://mindoshare.ai/kol?ref=cmev63nqn01mllr3wtpn2whcm', desc: 'KOL tasks & referrals' },
     ];
 
     const STORAGE_KEY = 'airdropTracker.v2';
